crates/carta/tests/snapshots/golden_writer__native__math__aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math
        DisplayMath
        "\\begin{aligned} x^2 + 1 \\\\ \\frac{a}{b} \\end{aligned}"
    ]
, Para
    [ Math
        DisplayMath
        "\\begin{aligned} a &= b + c \\\\ d &= e \\end{aligned}"
    ]
, Para
    [ Str "stack"
    , Space
    , Math
        InlineMath "\\begin{aligned} p \\\\ q \\\\ r \\end{aligned}"
    ]
]
