crates/carta/tests/snapshots/golden_writer__native__math__braces.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\overbrace{a+b}"
    , Space
    , Math InlineMath "\\underbrace{x+y+z}"
    , Space
    , Math InlineMath "\\overbrace{a+b}^{n}"
    , Space
    , Math InlineMath "\\underbrace{x+y}_{k}"
    ]
]
