crates/carta/tests/snapshots/golden_writer__native__math__cancel.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\cancel{x}"
    , Space
    , Math InlineMath "\\bcancel{y+z}"
    , Space
    , Math InlineMath "\\xcancel{abc}"
    ]
]
