crates/carta/tests/snapshots/golden_writer__native__math__ext-arrows.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\xrightarrow{f}"
    , Space
    , Math InlineMath "\\xleftarrow{g}"
    , Space
    , Math InlineMath "\\xrightarrow[u]{f}"
    ]
]
