crates/carta/tests/snapshots/golden_writer__native__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\frac{a}{b}"
    , Space
    , Math InlineMath "\\tfrac{a}{b}"
    , Space
    , Math InlineMath "\\dfrac{a}{b}"
    ]
]
