crates/carta/tests/snapshots/golden_writer__native__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para [ Math DisplayMath "\\int_0^1 x \\, dx" ] ]
