crates/carta/tests/snapshots/golden_writer__native__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "an"
    , Space
    , Str "equation"
    , Space
    , Math InlineMath "a^2 + b^2 = c^2"
    , Space
    , Str "inline"
    ]
]
