crates/carta/tests/snapshots/golden_writer__native__math__matrix-array.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math
        InlineMath "\\begin{array}{cc}a & b \\\\ c & d\\end{array}"
    , Space
    , Math
        InlineMath
        "\\begin{array}{ccc}1 & 2 & 3 \\\\ 4 & 5 & 6\\end{array}"
    ]
]
