crates/carta/tests/snapshots/golden_writer__native__math__modulo.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "a \\pmod{n}"
    , Space
    , Math InlineMath "a \\mod b"
    , Space
    , Math InlineMath "a \\bmod b"
    , Space
    , Math InlineMath "a \\pod{n}"
    ]
]
