crates/carta/tests/snapshots/golden_writer__native__math__negation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\not= b"
    , Space
    , Math InlineMath "\\not< c"
    , Space
    , Math InlineMath "\\not\\subset B"
    , Space
    , Math InlineMath "\\not\\vdash \\phi"
    , Space
    , Math InlineMath "\\not\\rightarrow"
    , Space
    , Math InlineMath "\\not a"
    ]
]
