crates/carta/tests/snapshots/golden_writer__native__math__over-under-set.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\overset{a}{b}"
    , Space
    , Math InlineMath "\\underset{a}{b}"
    , Space
    , Math InlineMath "\\stackrel{\\text{def}}{=}"
    ]
]
