crates/carta/tests/snapshots/golden_writer__native__math__sized-delimiters.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Math InlineMath "\\big( x \\big)"
    , Space
    , Math InlineMath "\\Big[ \\big\\{ y \\big\\} \\Big]"
    , Space
    , Math InlineMath "\\bigg\\langle v \\bigg\\rangle"
    , Space
    , Math InlineMath "\\big( a \\big/ b"
    ]
, Para [ Math DisplayMath "\\Bigg( \\sum_{i} a_i \\Bigg)" ]
]
